[Serif Upright] CYR Kerning Update

--- a/sources/NotoSerif.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif.glyphspackage/fontinfo.plist
@@ -6843,6 +6843,11 @@ kerningLTR = {
 "@MMK_R_cyr_Ia" = 30;
 "@MMK_R_cyr_U" = -50;
 "@MMK_R_cyr_Zhe" = 20;
+"@MMK_R_cyr_be" = -10;
+"@MMK_R_cyr_che" = -50;
+"@MMK_R_cyr_el" = 10;
+"@MMK_R_cyr_ia" = 15;
+"@MMK_R_cyr_zhe" = 15;
 "@MMK_R_o" = -20;
 "@MMK_R_quoteleft" = -70;
 "@MMK_R_quoteright" = -70;
@@ -7374,6 +7379,10 @@ at = -40;
 "@MMK_R_GRK_tau" = -40;
 "@MMK_R_GRK_upsilon" = -30;
 };
+"@MMK_L_H" = {
+"@MMK_R_cyr_che" = -20;
+"@MMK_R_cyr_de" = 10;
+};
 "@MMK_L_Ha-cy" = {
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Dze-cy" = -10;
@@ -7436,6 +7445,7 @@ v = -20;
 "@MMK_R_cyr_De" = -10;
 "@MMK_R_cyr_El" = -20;
 "@MMK_R_cyr_U" = -25;
+"@MMK_R_cyr_el" = -30;
 "@MMK_R_el-cy" = -40;
 "@MMK_R_period" = -20;
 };
@@ -7480,6 +7490,9 @@ v = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_cyr_De" = -50;
 "@MMK_R_cyr_El" = -30;
+"@MMK_R_cyr_che" = 5;
+"@MMK_R_cyr_de" = -20;
+"@MMK_R_cyr_el" = -40;
 "@MMK_R_el-cy" = -50;
 "@MMK_R_period" = -120;
 ampersand = -10;
@@ -7538,6 +7551,10 @@ v = -10;
 "@MMK_R_cyr_Ef" = -30;
 "@MMK_R_cyr_El" = -40;
 "@MMK_R_cyr_Ia" = -50;
+"@MMK_R_cyr_che" = 5;
+"@MMK_R_cyr_de" = -40;
+"@MMK_R_cyr_el" = -40;
+"@MMK_R_cyr_ia" = -30;
 "@MMK_R_o" = -70;
 "@MMK_R_period" = -90;
 "@MMK_R_s" = -5;
@@ -7651,6 +7668,7 @@ at = -50;
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
 "@MMK_R_cyr_Ia" = 20;
+"@MMK_R_cyr_che" = -50;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
 };
@@ -7756,6 +7774,7 @@ v = -70;
 };
 "@MMK_L_cyr_De" = {
 "@MMK_R_cyr_Zhe" = 10;
+"@MMK_R_cyr_che" = -20;
 };
 "@MMK_L_cyr_Ef" = {
 "@MMK_R_A" = -30;
@@ -7774,9 +7793,21 @@ v = -70;
 "@MMK_L_cyr_U" = {
 "@MMK_R_A" = -80;
 "@MMK_R_O" = -30;
+"@MMK_R_a" = -70;
 "@MMK_R_cyr_De" = -40;
 "@MMK_R_cyr_Ef" = -40;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = -50;
+"@MMK_R_cyr_de" = -70;
+"@MMK_R_cyr_el" = -50;
+"@MMK_R_cyr_ia" = -80;
+"@MMK_R_cyr_te" = -40;
+"@MMK_R_cyr_ze" = -20;
+"@MMK_R_cyr_zhe" = -30;
+"@MMK_R_n" = -30;
+"@MMK_R_o" = -70;
+"@MMK_R_x" = -50;
+"@MMK_R_y" = -30;
 "i-cy" = -40;
 "io-cy" = -55;
 "yi-cy" = 1;
@@ -7790,6 +7821,19 @@ v = -70;
 "@MMK_R_cyr_El" = 10;
 "@MMK_R_cyr_Ia" = 30;
 "@MMK_R_cyr_Zhe" = 35;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_de" = 20;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 50;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 20;
+"@MMK_R_n" = 5;
+"@MMK_R_x" = 40;
+};
+"@MMK_L_cyr_softsign" = {
+"@MMK_R_cyr_che" = -55;
+"@MMK_R_hyphen" = 20;
+"@MMK_R_y" = -50;
 };
 "@MMK_L_cyr_te" = {
 "@MMK_R_cyr_de" = -20;
@@ -8587,6 +8631,12 @@ UUID0 = {
 "@MMK_R_cyr_Ia" = 30;
 "@MMK_R_cyr_U" = -50;
 "@MMK_R_cyr_Zhe" = 40;
+"@MMK_R_cyr_be" = -20;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 20;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 25;
 "@MMK_R_o" = -20;
 "@MMK_R_quoteleft" = -70;
 "@MMK_R_quoteright" = -70;
@@ -9118,6 +9168,10 @@ at = -40;
 "@MMK_R_GRK_tau" = -40;
 "@MMK_R_GRK_upsilon" = -30;
 };
+"@MMK_L_H" = {
+"@MMK_R_cyr_che" = -20;
+"@MMK_R_cyr_de" = 10;
+};
 "@MMK_L_Ha-cy" = {
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Dze-cy" = -10;
@@ -9180,6 +9234,7 @@ v = -20;
 "@MMK_R_cyr_De" = -15;
 "@MMK_R_cyr_El" = -20;
 "@MMK_R_cyr_U" = -35;
+"@MMK_R_cyr_el" = -50;
 "@MMK_R_el-cy" = -40;
 "@MMK_R_period" = -20;
 };
@@ -9224,6 +9279,9 @@ v = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_cyr_De" = -50;
 "@MMK_R_cyr_El" = -30;
+"@MMK_R_cyr_che" = 10;
+"@MMK_R_cyr_de" = -20;
+"@MMK_R_cyr_el" = -30;
 "@MMK_R_el-cy" = -50;
 "@MMK_R_period" = -120;
 ampersand = -10;
@@ -9282,6 +9340,10 @@ v = -10;
 "@MMK_R_cyr_Ef" = -30;
 "@MMK_R_cyr_El" = -40;
 "@MMK_R_cyr_Ia" = -50;
+"@MMK_R_cyr_che" = 13;
+"@MMK_R_cyr_de" = -30;
+"@MMK_R_cyr_el" = -40;
+"@MMK_R_cyr_ia" = -30;
 "@MMK_R_o" = -50;
 "@MMK_R_period" = -90;
 "@MMK_R_s" = -5;
@@ -9395,6 +9457,7 @@ at = -50;
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
 "@MMK_R_cyr_Ia" = 20;
+"@MMK_R_cyr_che" = -60;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
 };
@@ -9500,6 +9563,7 @@ v = -70;
 };
 "@MMK_L_cyr_De" = {
 "@MMK_R_cyr_Zhe" = 10;
+"@MMK_R_cyr_che" = -20;
 };
 "@MMK_L_cyr_Ef" = {
 "@MMK_R_A" = -30;
@@ -9518,9 +9582,21 @@ v = -70;
 "@MMK_L_cyr_U" = {
 "@MMK_R_A" = -85;
 "@MMK_R_O" = -30;
+"@MMK_R_a" = -70;
 "@MMK_R_cyr_De" = -40;
 "@MMK_R_cyr_Ef" = -40;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = -30;
+"@MMK_R_cyr_de" = -80;
+"@MMK_R_cyr_el" = -80;
+"@MMK_R_cyr_ia" = -80;
+"@MMK_R_cyr_te" = -50;
+"@MMK_R_cyr_ze" = -20;
+"@MMK_R_cyr_zhe" = -50;
+"@MMK_R_n" = -30;
+"@MMK_R_o" = -70;
+"@MMK_R_x" = -60;
+"@MMK_R_y" = -40;
 "i-cy" = -30;
 "io-cy" = -55;
 "yi-cy" = 1;
@@ -9534,6 +9610,19 @@ v = -70;
 "@MMK_R_cyr_El" = 20;
 "@MMK_R_cyr_Ia" = 35;
 "@MMK_R_cyr_Zhe" = 40;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_de" = 20;
+"@MMK_R_cyr_el" = 30;
+"@MMK_R_cyr_ia" = 50;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 30;
+"@MMK_R_n" = 15;
+"@MMK_R_x" = 40;
+};
+"@MMK_L_cyr_softsign" = {
+"@MMK_R_cyr_che" = -50;
+"@MMK_R_hyphen" = 30;
+"@MMK_R_y" = -50;
 };
 "@MMK_L_cyr_te" = {
 "@MMK_R_cyr_de" = -20;
@@ -10336,6 +10425,12 @@ zswashtail = {
 "@MMK_R_cyr_Ia" = 20;
 "@MMK_R_cyr_U" = -50;
 "@MMK_R_cyr_Zhe" = 25;
+"@MMK_R_cyr_be" = -10;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 20;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 25;
 "@MMK_R_o" = -20;
 "@MMK_R_quoteleft" = -70;
 "@MMK_R_quoteright" = -70;
@@ -10867,6 +10962,10 @@ at = -40;
 "@MMK_R_GRK_tau" = -40;
 "@MMK_R_GRK_upsilon" = -30;
 };
+"@MMK_L_H" = {
+"@MMK_R_cyr_che" = -20;
+"@MMK_R_cyr_de" = 10;
+};
 "@MMK_L_Ha-cy" = {
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Dze-cy" = -10;
@@ -10929,6 +11028,7 @@ v = -20;
 "@MMK_R_cyr_De" = -20;
 "@MMK_R_cyr_El" = -30;
 "@MMK_R_cyr_U" = -15;
+"@MMK_R_cyr_el" = -50;
 "@MMK_R_el-cy" = -40;
 "@MMK_R_period" = -20;
 };
@@ -10973,6 +11073,11 @@ v = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_cyr_De" = -50;
 "@MMK_R_cyr_El" = -30;
+"@MMK_R_cyr_che" = 20;
+"@MMK_R_cyr_de" = -15;
+"@MMK_R_cyr_el" = -40;
+"@MMK_R_cyr_ia" = -20;
+"@MMK_R_cyr_te" = 15;
 "@MMK_R_el-cy" = -50;
 "@MMK_R_period" = -120;
 ampersand = -10;
@@ -11032,6 +11137,10 @@ v = -10;
 "@MMK_R_cyr_El" = -60;
 "@MMK_R_cyr_Ia" = -40;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = 30;
+"@MMK_R_cyr_de" = -30;
+"@MMK_R_cyr_el" = -50;
+"@MMK_R_cyr_ia" = -20;
 "@MMK_R_o" = -30;
 "@MMK_R_period" = -90;
 "@MMK_R_s" = -5;
@@ -11145,6 +11254,8 @@ at = -50;
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
 "@MMK_R_cyr_Ia" = 15;
+"@MMK_R_cyr_be" = -30;
+"@MMK_R_cyr_che" = -50;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
 };
@@ -11251,6 +11362,7 @@ v = -70;
 "@MMK_L_cyr_De" = {
 "@MMK_R_cyr_De" = 20;
 "@MMK_R_cyr_Zhe" = 10;
+"@MMK_R_cyr_che" = -20;
 };
 "@MMK_L_cyr_Ef" = {
 "@MMK_R_A" = -30;
@@ -11270,9 +11382,21 @@ v = -70;
 "@MMK_R_A" = -100;
 "@MMK_R_O" = -25;
 "@MMK_R_T" = 20;
+"@MMK_R_a" = -70;
 "@MMK_R_cyr_De" = -40;
 "@MMK_R_cyr_Ef" = -50;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = -50;
+"@MMK_R_cyr_de" = -80;
+"@MMK_R_cyr_el" = -120;
+"@MMK_R_cyr_ia" = -100;
+"@MMK_R_cyr_te" = -70;
+"@MMK_R_cyr_ze" = -40;
+"@MMK_R_cyr_zhe" = -60;
+"@MMK_R_n" = -60;
+"@MMK_R_o" = -70;
+"@MMK_R_x" = -80;
+"@MMK_R_y" = -70;
 "i-cy" = -10;
 "io-cy" = -55;
 "yi-cy" = 1;
@@ -11285,6 +11409,19 @@ v = -70;
 "@MMK_R_cyr_El" = 15;
 "@MMK_R_cyr_Ia" = 15;
 "@MMK_R_cyr_Zhe" = 20;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_de" = 20;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 30;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 20;
+"@MMK_R_n" = 10;
+"@MMK_R_x" = 15;
+};
+"@MMK_L_cyr_softsign" = {
+"@MMK_R_cyr_che" = -30;
+"@MMK_R_hyphen" = 30;
+"@MMK_R_y" = -50;
 };
 "@MMK_L_cyr_te" = {
 "@MMK_R_cyr_de" = -20;
@@ -12082,6 +12219,12 @@ zswashtail = {
 "@MMK_R_cyr_Ia" = 30;
 "@MMK_R_cyr_U" = -40;
 "@MMK_R_cyr_Zhe" = 20;
+"@MMK_R_cyr_be" = -10;
+"@MMK_R_cyr_che" = -30;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 20;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 25;
 "@MMK_R_o" = -20;
 "@MMK_R_quoteleft" = -70;
 "@MMK_R_quoteright" = -70;
@@ -12615,6 +12758,10 @@ at = -40;
 "@MMK_R_GRK_tau" = -40;
 "@MMK_R_GRK_upsilon" = -30;
 };
+"@MMK_L_H" = {
+"@MMK_R_cyr_che" = -5;
+"@MMK_R_cyr_de" = 10;
+};
 "@MMK_L_Ha-cy" = {
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Dze-cy" = -10;
@@ -12673,6 +12820,7 @@ v = -20;
 "@MMK_R_cyr_De" = -25;
 "@MMK_R_cyr_El" = -25;
 "@MMK_R_cyr_U" = -30;
+"@MMK_R_cyr_el" = -20;
 "@MMK_R_period" = -20;
 };
 "@MMK_L_O-cy" = {
@@ -12716,6 +12864,9 @@ v = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_cyr_De" = -50;
 "@MMK_R_cyr_El" = -30;
+"@MMK_R_cyr_che" = 10;
+"@MMK_R_cyr_de" = -15;
+"@MMK_R_cyr_el" = -30;
 "@MMK_R_el-cy" = -50;
 "@MMK_R_period" = -90;
 ampersand = -10;
@@ -12774,6 +12925,10 @@ v = -10;
 "@MMK_R_cyr_Ef" = -30;
 "@MMK_R_cyr_El" = -30;
 "@MMK_R_cyr_Ia" = -40;
+"@MMK_R_cyr_che" = 10;
+"@MMK_R_cyr_de" = -10;
+"@MMK_R_cyr_el" = -10;
+"@MMK_R_cyr_ia" = -30;
 "@MMK_R_o" = -50;
 "@MMK_R_period" = -60;
 "@MMK_R_s" = -5;
@@ -12886,6 +13041,7 @@ at = -50;
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
 "@MMK_R_cyr_Ia" = 20;
+"@MMK_R_cyr_che" = -50;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
 };
@@ -12995,6 +13151,7 @@ v = -70;
 };
 "@MMK_L_cyr_De" = {
 "@MMK_R_cyr_Zhe" = 10;
+"@MMK_R_cyr_che" = -20;
 };
 "@MMK_L_cyr_Ef" = {
 "@MMK_R_A" = -30;
@@ -13015,9 +13172,21 @@ v = -70;
 "@MMK_R_A" = -70;
 "@MMK_R_B" = -10;
 "@MMK_R_O" = -20;
+"@MMK_R_a" = -60;
 "@MMK_R_cyr_De" = -50;
 "@MMK_R_cyr_Ef" = -20;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = -20;
+"@MMK_R_cyr_de" = -80;
+"@MMK_R_cyr_el" = -70;
+"@MMK_R_cyr_ia" = -50;
+"@MMK_R_cyr_te" = -40;
+"@MMK_R_cyr_ze" = -30;
+"@MMK_R_cyr_zhe" = -30;
+"@MMK_R_n" = -20;
+"@MMK_R_o" = -50;
+"@MMK_R_x" = -40;
+"@MMK_R_y" = -50;
 "i-cy" = -10;
 "iegrave-cy" = -50;
 "yi-cy" = 20;
@@ -13031,6 +13200,18 @@ v = -70;
 "@MMK_R_cyr_El" = 20;
 "@MMK_R_cyr_Ia" = 25;
 "@MMK_R_cyr_Zhe" = 35;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_de" = 20;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 40;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_n" = 10;
+"@MMK_R_x" = 30;
+};
+"@MMK_L_cyr_softsign" = {
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_hyphen" = 30;
+"@MMK_R_y" = -50;
 };
 "@MMK_L_cyr_te" = {
 "@MMK_R_cyr_de" = -10;
@@ -13816,6 +13997,12 @@ zswashtail = {
 "@MMK_R_cyr_Ia" = 30;
 "@MMK_R_cyr_U" = -40;
 "@MMK_R_cyr_Zhe" = 35;
+"@MMK_R_cyr_be" = -10;
+"@MMK_R_cyr_che" = -30;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 20;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 25;
 "@MMK_R_o" = -20;
 "@MMK_R_quoteleft" = -70;
 "@MMK_R_quoteright" = -70;
@@ -14349,6 +14536,10 @@ at = -40;
 "@MMK_R_GRK_tau" = -40;
 "@MMK_R_GRK_upsilon" = -30;
 };
+"@MMK_L_H" = {
+"@MMK_R_cyr_che" = -5;
+"@MMK_R_cyr_de" = 10;
+};
 "@MMK_L_Ha-cy" = {
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Dze-cy" = -10;
@@ -14407,6 +14598,7 @@ v = -20;
 "@MMK_R_cyr_De" = -20;
 "@MMK_R_cyr_El" = -30;
 "@MMK_R_cyr_U" = -20;
+"@MMK_R_cyr_el" = -30;
 "@MMK_R_period" = -20;
 };
 "@MMK_L_O-cy" = {
@@ -14450,6 +14642,10 @@ v = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_cyr_De" = -40;
 "@MMK_R_cyr_El" = -30;
+"@MMK_R_cyr_che" = 20;
+"@MMK_R_cyr_de" = -10;
+"@MMK_R_cyr_el" = -30;
+"@MMK_R_cyr_te" = 10;
 "@MMK_R_el-cy" = -50;
 "@MMK_R_period" = -90;
 ampersand = -10;
@@ -14509,6 +14705,10 @@ v = -10;
 "@MMK_R_cyr_El" = -40;
 "@MMK_R_cyr_Ia" = -40;
 "@MMK_R_cyr_U" = 15;
+"@MMK_R_cyr_che" = 10;
+"@MMK_R_cyr_de" = -10;
+"@MMK_R_cyr_el" = -20;
+"@MMK_R_cyr_ia" = -20;
 "@MMK_R_o" = -40;
 "@MMK_R_period" = -60;
 "@MMK_R_s" = -5;
@@ -14621,6 +14821,7 @@ at = -50;
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
 "@MMK_R_cyr_Ia" = 20;
+"@MMK_R_cyr_che" = -50;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
 };
@@ -14730,6 +14931,7 @@ v = -70;
 "@MMK_L_cyr_De" = {
 "@MMK_R_cyr_De" = 15;
 "@MMK_R_cyr_Zhe" = 10;
+"@MMK_R_cyr_che" = -20;
 };
 "@MMK_L_cyr_Ef" = {
 "@MMK_R_A" = -30;
@@ -14750,9 +14952,21 @@ v = -70;
 "@MMK_R_A" = -70;
 "@MMK_R_O" = -20;
 "@MMK_R_T" = 20;
+"@MMK_R_a" = -60;
 "@MMK_R_cyr_De" = -40;
 "@MMK_R_cyr_Ef" = -30;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = -30;
+"@MMK_R_cyr_de" = -80;
+"@MMK_R_cyr_el" = -70;
+"@MMK_R_cyr_ia" = -70;
+"@MMK_R_cyr_te" = -40;
+"@MMK_R_cyr_ze" = -30;
+"@MMK_R_cyr_zhe" = -40;
+"@MMK_R_n" = -30;
+"@MMK_R_o" = -50;
+"@MMK_R_x" = -60;
+"@MMK_R_y" = -50;
 "i-cy" = -10;
 "iegrave-cy" = -50;
 "io-cy" = -30;
@@ -14767,6 +14981,18 @@ v = -70;
 "@MMK_R_cyr_El" = 15;
 "@MMK_R_cyr_Ia" = 25;
 "@MMK_R_cyr_Zhe" = 30;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_de" = 20;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 40;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_n" = 10;
+"@MMK_R_x" = 30;
+};
+"@MMK_L_cyr_softsign" = {
+"@MMK_R_cyr_che" = -20;
+"@MMK_R_hyphen" = 30;
+"@MMK_R_y" = -50;
 };
 "@MMK_L_cyr_te" = {
 "@MMK_R_cyr_de" = -10;
@@ -15561,6 +15787,12 @@ zswashtail = {
 "@MMK_R_cyr_Ia" = 30;
 "@MMK_R_cyr_U" = -40;
 "@MMK_R_cyr_Zhe" = 25;
+"@MMK_R_cyr_be" = -10;
+"@MMK_R_cyr_che" = -30;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 20;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_cyr_zhe" = 20;
 "@MMK_R_o" = -20;
 "@MMK_R_quoteleft" = -70;
 "@MMK_R_quoteright" = -70;
@@ -16096,6 +16328,7 @@ at = -40;
 };
 "@MMK_L_H" = {
 "@MMK_R_cyr_De" = 20;
+"@MMK_R_cyr_che" = -5;
 };
 "@MMK_L_Ha-cy" = {
 "@MMK_R_Che-cy" = -20;
@@ -16198,6 +16431,10 @@ v = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_cyr_De" = -35;
 "@MMK_R_cyr_El" = -30;
+"@MMK_R_cyr_che" = 25;
+"@MMK_R_cyr_de" = -20;
+"@MMK_R_cyr_el" = -50;
+"@MMK_R_cyr_te" = 15;
 "@MMK_R_el-cy" = -50;
 "@MMK_R_period" = -90;
 ampersand = -10;
@@ -16257,6 +16494,10 @@ v = -10;
 "@MMK_R_cyr_El" = -70;
 "@MMK_R_cyr_Ia" = -40;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = 20;
+"@MMK_R_cyr_de" = -20;
+"@MMK_R_cyr_el" = -30;
+"@MMK_R_cyr_ia" = -20;
 "@MMK_R_o" = -30;
 "@MMK_R_period" = -60;
 "@MMK_R_s" = -5;
@@ -16369,6 +16610,8 @@ at = -50;
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
 "@MMK_R_cyr_Ia" = 15;
+"@MMK_R_cyr_be" = -30;
+"@MMK_R_cyr_che" = -50;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
 };
@@ -16478,6 +16721,7 @@ v = -70;
 "@MMK_L_cyr_De" = {
 "@MMK_R_cyr_De" = 20;
 "@MMK_R_cyr_Zhe" = 10;
+"@MMK_R_cyr_che" = -20;
 };
 "@MMK_L_cyr_Ef" = {
 "@MMK_R_A" = -30;
@@ -16498,9 +16742,21 @@ v = -70;
 "@MMK_R_A" = -75;
 "@MMK_R_O" = -35;
 "@MMK_R_T" = 20;
+"@MMK_R_a" = -60;
 "@MMK_R_cyr_De" = -40;
 "@MMK_R_cyr_Ef" = -35;
 "@MMK_R_cyr_U" = 20;
+"@MMK_R_cyr_che" = -50;
+"@MMK_R_cyr_de" = -80;
+"@MMK_R_cyr_el" = -100;
+"@MMK_R_cyr_ia" = -90;
+"@MMK_R_cyr_te" = -40;
+"@MMK_R_cyr_ze" = -40;
+"@MMK_R_cyr_zhe" = -60;
+"@MMK_R_n" = -60;
+"@MMK_R_o" = -50;
+"@MMK_R_x" = -70;
+"@MMK_R_y" = -60;
 "i-cy" = -10;
 "iegrave-cy" = -50;
 "yi-cy" = 20;
@@ -16514,6 +16770,18 @@ v = -70;
 "@MMK_R_cyr_El" = 15;
 "@MMK_R_cyr_Ia" = 15;
 "@MMK_R_cyr_Zhe" = 20;
+"@MMK_R_cyr_che" = -40;
+"@MMK_R_cyr_de" = 20;
+"@MMK_R_cyr_el" = 20;
+"@MMK_R_cyr_ia" = 30;
+"@MMK_R_cyr_te" = -20;
+"@MMK_R_n" = 10;
+"@MMK_R_x" = 15;
+};
+"@MMK_L_cyr_softsign" = {
+"@MMK_R_cyr_che" = -20;
+"@MMK_R_hyphen" = 30;
+"@MMK_R_y" = -50;
 };
 "@MMK_L_cyr_te" = {
 "@MMK_R_cyr_de" = -20;
